--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 .DS_Store
-*.xml
-*.doc
-*.html
+.swp
+.tmp.xml
 
+# Output files
+csand-*.html
+csand-*.doc
+csand-*.xml
+csand-*_files
+
+# Deploy key
+deploy_key
