--- a/Makefile.win
+++ b/Makefile.win
@@ -1,7 +1,6 @@
 #!make
-SHELL := /bin/bash
 
-IGNORE := $(shell mkdir -p $(HOME)/.cache/xml2rfc)
+IGNORE := $(shell md $(USERPROFILE)\.cache\xml2rfc)
 
 SRC := $(shell yq r metanorma.yml metanorma.source.files | cut -c 3-999)
 ifeq ($(SRC),ll)
@@ -15,13 +14,13 @@ INPUT_XML  := $(patsubst %.adoc,%.xml,$(SRC))
 OUTPUT_XML  := $(patsubst sources/%,documents/%,$(patsubst %.adoc,%.xml,$(SRC)))
 OUTPUT_HTML := $(patsubst %.xml,%.html,$(OUTPUT_XML))
 
-COMPILE_CMD_LOCAL := bundle exec metanorma -R $${FILENAME//adoc/rxl} $$FILENAME
-COMPILE_CMD_DOCKER := docker run -v "$$(pwd)":/metanorma/ ribose/metanorma "metanorma $${FILENAME//adoc/rxl}  $$FILENAME"
+COMPILE_CMD_LOCAL := bundle exec metanorma -R
+COMPILE_CMD_DOCKER := docker run -v "$$(pwd)":/metanorma/ ribose/metanorma metanorma -R 
 
 ifdef METANORMA_DOCKER
-  COMPILE_CMD := echo "Compiling via docker..."; $(COMPILE_CMD_DOCKER)
+  COMPILE_CMD := echo "Compiling via docker..." & $(COMPILE_CMD_DOCKER)
 else
-  COMPILE_CMD := echo "Compiling locally..."; $(COMPILE_CMD_LOCAL)
+  COMPILE_CMD := echo "Compiling locally..." & $(COMPILE_CMD_LOCAL)
 endif
 
 _OUT_FILES := $(foreach FORMAT,$(FORMATS),$(shell echo $(FORMAT) | tr '[:lower:]' '[:upper:]'))
@@ -30,16 +29,13 @@ OUT_FILES  := $(foreach F,$(_OUT_FILES),$($F))
 all: documents.html
 
 documents:
-	mkdir -p $@
+	mkdir $@
 
 documents/%.xml: documents sources/%.xml
 	mv sources/$*.{xml,html,doc,rxl} documents
 
 %.xml %.html:	%.adoc | bundle
-	pushd $(dir $^); \
-	FILENAME=$(notdir $^); \
-	${COMPILE_CMD}; \
-	popd
+	${COMPILE_CMD} $(^:.adoc=.rxl) $^
 
 documents.rxl: $(OUTPUT_XML)
 	bundle exec relaton concatenate \
@@ -75,7 +71,7 @@ clean:
 	rm -rf documents published *_images sources/*.{rxl,xml,html,doc}
 
 bundle:
-	if [ "x" == "${METANORMA_DOCKER}x" ]; then bundle; fi
+	IF  "x" == "%METANORMA_DOCKER%" bundle
 
 .PHONY: bundle all open clean
 
@@ -107,12 +103,12 @@ endef
 $(foreach FORMAT,$(FORMATS),$(eval $(WATCH_TASKS)))
 
 serve: $(NODE_BIN_DIR)/live-server revealjs-css reveal.js images
-	export PORT=$${PORT:-8123} ; \
-	port=$${PORT} ; \
-	for html in $(HTML); do \
-		$< --entry-file=$$html --port=$${port} --ignore="*.html,*.xml,Makefile,Gemfile.*,package.*.json" --wait=1000 & \
-		port=$$(( port++ )) ;\
-	done
+	set PORT=$${PORT:-8123} & \
+	set port=$${PORT} & \
+	for /r %%html in $(HTML) do ( \
+		$< --entry-file=%%html --port=%port% --ignore="*.html,*.xml,Makefile,Gemfile.*,package.*.json" --wait=1000 & \
+		set /A port=%port%+1 \
+	)
 
 watch-serve: $(NODE_BIN_DIR)/run-p
 	$< watch serve
@@ -120,20 +116,10 @@ watch-serve: $(NODE_BIN_DIR)/run-p
 #
 # Deploy jobs
 #
+
 publish: published
 published: documents.html
-	mkdir -p published && \
-	cp -a documents $@/ && \
-	cp $< published/index.html; \
-	if [ -d "images" ]; then cp -a images published; fi
-
-deploy_key:
-	openssl aes-256-cbc -K $(encrypted_$(ENCRYPTION_LABEL)_key) \
-		-iv $(encrypted_$(ENCRYPTION_LABEL)_iv) -in $@.enc -out $@ -d && \
-	chmod 600 $@
-
-deploy: deploy_key
-	export COMMIT_AUTHOR_EMAIL=$(COMMIT_AUTHOR_EMAIL); \
-	./deploy.sh
-
-.PHONY: publish deploy
+	mkdir $@
+	cp -a documents $@/
+	cp $< $@/index.html
+	IF EXIST "images" xcopy /E images $@
