Update README and collection description

--- a/metanorma.yml
+++ b/metanorma.yml
@@ -5,4 +5,4 @@ metanorma:
 relaton:
   collection:
     organization: "Metanorma : Standards for standards"
-    name: "The ISO Rice document in Metanorma (AsciiISO syntax)"
+    name: "Chinese Standards based on the ISO Rice document"
