--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           architecture: 'x64'
-        run: |
-          ruby -v
+        run: ruby -v
       - name: Setup Metanorma
         env:
           JAVA_OPTS: "java.awt.headless=true"
