--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
       - name: Setup Metanorma
         env:
           JAVA_OPTS: "java.awt.headless=true"
-          COMMIT_AUTHOR_EMAIL: "$(yq r metanorma.yml metanorma.deploy.email)"
         run: |
           gem update --system
-          gem install bundler -v "~> 2"
+          sudo snap install jq
+          sudo snap install yq
           sudo bash -c "curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | bash"
           nvm use mn-node 
       - name: Build document
