--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,16 +17,20 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           architecture: 'x64'
-      - name: Setup Metanorma
-        env:
-          JAVA_OPTS: "java.awt.headless=true"
+      - name: Setup snaps
         run: |
-          gem update --system
           sudo snap install jq
           sudo snap install yq
+      - name: Update gems
+        run: |
+          gem update --system
+      - name: Setup Metanorma
+        run: |
           sudo bash -c "curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | bash"
           nvm use mn-node 
       - name: Build document
+        env:
+          JAVA_OPTS: "java.awt.headless=true"
         run: |
           make clean all publish
 
