--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,12 +35,19 @@ jobs:
           JAVA_OPTS: "java.awt.headless=true"
         run: |
           make clean all publish
+      - uses: actions/upload-artifact@master
+        with:
+          name: published
+          path: published
 
   mn-deploy-gh-pages:
     runs-on: ubuntu-latest
     needs: build
     steps:
     - uses: actions/checkout@master
+    - uses: actions/download-artifact@master
+      with:
+        name: published
     - name: deploy-to-gh
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
