--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -23,20 +23,27 @@ jobs:
           auth_header="$(git config --local --get http.https://github.com/.extraheader)"
           git submodule sync --recursive
           git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      - name: Cache xml2rfc
+        id: cache-xml2rfc
+        uses: actions/cache@v1
+        with:
+          path: ~/.cache/xml2rfc
+          key: xml2rfc
+          restore-key: xml2rfc
       - name: Use Ruby
         uses: actions/setup-ruby@v1
         with:
           ruby-version: ${{ matrix.ruby }}
           architecture: 'x64'
-      - name: Update gems
-        shell: pwsh
-        run: |
-          gem install bundler
-          bundle install --jobs 4 --retry 3
+      - name: Use Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '2.7'
+          architecture: 'x64'
       - name: Use Metanorma
         shell: pwsh
         run: |
-          cinst -y metanorma
+          cinst --no-progress -y metanorma
       - name: Install yq
         shell: pwsh
         run: |
