--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -45,6 +45,13 @@ jobs:
 
       - run: gem install relaton-cli
 
-      - run: make clean all publish SKIP_BUNDLE=true
+      - name: Metanorma compile
         env:
           JAVA_OPTS: "java.awt.headless=true"
+        run: |
+          bundle exec metanorma a.adoc --agree-to-terms
+
+
+        #      - run: make clean all publish SKIP_BUNDLE=true
+        #env:
+        #  JAVA_OPTS: "java.awt.headless=true"
