--- a/.github/workflows/ubuntu1.yaml
+++ b/.github/workflows/ubuntu1.yaml
@@ -37,12 +37,14 @@ jobs:
           curl -L https://raw.githubusercontent.com/metanorma/metanorma-linux-setup/master/ubuntu.sh | sudo bash
           sudo chown -R $USER:$(id -gn $USER) $HOME/.config
 
-      - run: sudo snap install yq
-
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.6
 
+      - name: Bundle
+        run: |
+          bundle install -j 4
+      
       - name: Metanorma compile
         env:
           JAVA_OPTS: "java.awt.headless=true"
